--- a/product.html
+++ b/product.html
@@ -32,36 +32,7 @@
                         <img src="img/mglass.svg " alt="mglass" class="mgpic">
                     </div>
                     <div class="rightpart">
-                        <div class="menu-block">
-                            <img src="img/menu-btn-pic.svg " alt="menu-btn-pic" class="desktop_mod">
-                            <div class="menu">
-                                <h2 class="menu-main-header">menu</h2>
-                                <h3 class="menu-header">man</h3>
-                                <div class="submenu">
-                                    <a href="#" class="menu-elem">Accessories</a>
-                                    <a href="#" class="menu-elem">Bags</a>
-                                    <a href="#" class="menu-elem">Denim</a>
-                                    <a href="#" class="menu-elem">T-Shirts</a>
-                                </div>
-                                <h3 class="menu-header">woman</h3>
-                                <div class="submenu">
-                                    <a href="#" class="menu-elem">Accessories</a>
-                                    <a href="#" class="menu-elem">Jackets & Coats</a>
-                                    <a href="#" class="menu-elem">Polos</a>
-                                    <a href="#" class="menu-elem">T-Shirts</a>
-                                    <a href="#" class="menu-elem">Shirts</a>
-                                </div>
-                                <h3 class="menu-header">kids</h3>
-                                <div class="submenu">
-                                    <a href="#" class="menu-elem">Accessories</a>
-                                    <a href="#" class="menu-elem">Jackets & Coats</a>
-                                    <a href="#" class="menu-elem">Polos</a>
-                                    <a href="#" class="menu-elem">T-Shirts</a>
-                                    <a href="#" class="menu-elem">Shirts</a>
-                                    <a href="#" class="menu-elem">Bags</a>
-                                </div>
-                            </div>
-                        </div>
+                        <img src="img/menu-btn-pic.svg " alt="menu-btn-pic" class="desktop_mod" onclick="openMenu()">
                         <img src="img/people.svg " alt="people" class="no-phone no-phone_pic desktop_mod">
                         <div class="chart">
                             <img src="img/cart.svg " alt="chart" class="no-phone no-phone_pic">
@@ -71,13 +42,43 @@
                 </div>
             </div>
         </nav>
-        <nav class="breadcrumb-bkg">
+        <nav class="breadcrumb-bkg menu-anchor">
             <div class="growstopper">
                 <div class="breadcrumb">
                     <div class="breadcrumb-leftpart">NEW ARRIVALS</div>
                     <div class="breadcrumb-rightpart">HOME / MEN / <span class="breadcrumb-current">NEW ARRIVALS</span></div>
                 </div>
             </div>
+            <nav class="menu" id="mainMenu">
+                <div class="close-btn-container">
+                    <img src="img/close-btn-face.svg" alt="Close menu" class="close-btn" onclick="closeMenu()">
+                </div>
+                <h2 class="menu-main-header">menu</h2>
+                <h3 class="menu-header">man</h3>
+                <div class="submenu">
+                    <a href="#" class="menu-elem">Accessories</a>
+                    <a href="#" class="menu-elem">Bags</a>
+                    <a href="#" class="menu-elem">Denim</a>
+                    <a href="#" class="menu-elem">T-Shirts</a>
+                </div>
+                <h3 class="menu-header">woman</h3>
+                <div class="submenu">
+                    <a href="#" class="menu-elem">Accessories</a>
+                    <a href="#" class="menu-elem">Jackets & Coats</a>
+                    <a href="#" class="menu-elem">Polos</a>
+                    <a href="#" class="menu-elem">T-Shirts</a>
+                    <a href="#" class="menu-elem">Shirts</a>
+                </div>
+                <h3 class="menu-header">kids</h3>
+                <div class="submenu">
+                    <a href="#" class="menu-elem">Accessories</a>
+                    <a href="#" class="menu-elem">Jackets & Coats</a>
+                    <a href="#" class="menu-elem">Polos</a>
+                    <a href="#" class="menu-elem">T-Shirts</a>
+                    <a href="#" class="menu-elem">Shirts</a>
+                    <a href="#" class="menu-elem">Bags</a>
+                </div>
+            </nav>
         </nav>
     </header>
 
@@ -237,6 +238,15 @@
             </div>
         </div>
     </footer>
+    <script>
+        function openMenu() {
+            document.getElementById("mainMenu").style.display = "block";
+        }
+
+        function closeMenu() {
+            document.getElementById("mainMenu").style.display = "none";
+        }
+    </script>
 </body>
 
 </html>
