Improve menu on catalog page

--- a/catalog.html
+++ b/catalog.html
@@ -98,26 +98,64 @@
                             </svg>
                         </a></li>
                         <li class="filter-menu-elem">
-                            <h3 class="filter-menu-elem-header">category</h3>
-                            <ul class="category-menu">
-                                <li class="category-menu-elem">Accessories</li>
-                                <li class="category-menu-elem">Bags</li>
-                                <li class="category-menu-elem">Denim</li>
-                                <li class="category-menu-elem">Hoodies & Sweatshirts</li>
-                                <li class="category-menu-elem">Jackets & Coats</li>
-                                <li class="category-menu-elem">Polos</li>
-                                <li class="category-menu-elem">Shirts</li>
-                                <li class="category-menu-elem">Shoes</li>
-                                <li class="category-menu-elem">Sweaters & Knits</li>
-                                <li class="category-menu-elem">T-Shirts</li>
-                                <li class="category-menu-elem">Tanks</li>
-                            </ul>
+                            <details>
+                                <summary class="filter-menu-elem-summary">category</summary>
+                                <ul class="category-menu">
+                                    <li class="category-menu-elem">
+                                        <a href="#" class="category-menu-link">Accessories</a>
+                                    </li>
+                                    <li class="category-menu-elem">
+                                        <a href="#" class="category-menu-link">Bags</a>
+                                    </li>
+                                    <li class="category-menu-elem">
+                                        <a href="#" class="category-menu-link">Denim</a>
+                                    </li>
+                                    <li class="category-menu-elem">
+                                        <a href="#" class="category-menu-link">Hoodies & Sweatshirts</a>
+                                    </li>
+                                    <li class="category-menu-elem">
+                                        <a href="#" class="category-menu-link">Jackets & Coats</a>
+                                    </li>
+                                    <li class="category-menu-elem">
+                                        <a href="#" class="category-menu-link">Polos</a>
+                                    </li>
+                                    <li class="category-menu-elem">
+                                        <a href="#" class="category-menu-link">Shirts</a>
+                                    </li>
+                                    <li class="category-menu-elem">
+                                        <a href="#" class="category-menu-link">Shoes</a>
+                                    </li>
+                                    <li class="category-menu-elem">
+                                        <a href="#" class="category-menu-link">Sweaters & Knits</a>
+                                    </li>
+                                    <li class="category-menu-elem">
+                                        <a href="#" class="category-menu-link">T-Shirts</a>
+                                    </li>
+                                    <li class="category-menu-elem">
+                                        <a href="#" class="category-menu-link">Tanks</a>
+                                    </li>
+                                </ul>
+                            </details>
                         </li>
                         <li class="filter-menu-elem">
-                            <h3 class="filter-menu-elem-header">brand</h3>
+                            <details>
+                                <summary class="filter-menu-elem-summary">brand</summary>
+                                <ul class="category-menu">
+                                    <li class="category-menu-elem"><a href="#" class="category-menu-link">brand</a></li>
+                                    <li class="category-menu-elem"><a href="#" class="category-menu-link">brand</a></li>
+                                    <li class="category-menu-elem"><a href="#" class="category-menu-link">brand</a></li>
+                                </ul>
+                            </details>
                         </li>
                         <li class="filter-menu-elem">
-                            <h3 class="filter-menu-elem-header">designer</h3>
+                            <details>
+                                <summary class="filter-menu-elem-summary">designer</summary>
+                                <ul class="category-menu">
+                                    <li class="category-menu-elem"><a href="#" class="category-menu-link">designer</a></li>
+                                    <li class="category-menu-elem"><a href="#" class="category-menu-link">designer</a></li>
+                                    <li class="category-menu-elem"><a href="#" class="category-menu-link">designer</a></li>
+                                </ul>
+                            </details>
                         </li>
                     </ul>
                 </li>
