--- a/cart.html
+++ b/cart.html
@@ -39,7 +39,7 @@
                     <div class="breadcrumb-leftpart">SHOPPING CART</div>
                 </div>
             </div>
-            <nav class="menu" id="mainMenu">
+            <nav class="menu-off" id="mainMenu">
                 <div class="close-btn-container">
                     <img src="img/close-btn-face.svg" alt="Close menu" class="close-btn" onclick="closeMenu()">
                 </div>
@@ -182,11 +182,11 @@
     </footer>
     <script>
         function openMenu() {
-            document.getElementById("mainMenu").style.display = "block";
+            document.getElementById("mainMenu").className = "menu-on";
         }
 
         function closeMenu() {
-            document.getElementById("mainMenu").style.display = "none";
+            document.getElementById("mainMenu").className = "menu-off";
         }
     </script>
 </body>
