Fix label positioning in radio-buttons

--- a/registration.html
+++ b/registration.html
@@ -87,14 +87,16 @@
                 <input type="text" name="first-name" id="firstName" class="reg-input" placeholder="First Name"><br>
                 <input type="text" name="last-name" id="lastName" class="reg-input" placeholder="Last Name">
             </label><br>
-            <label class="reg-lab_radio">
-                <input type="radio" name="sex" id="male" class="reg-radiobtn">
-                Male
-            </label>
-            <label for="female" class="reg-lab_radio">
-                <input type="radio" name="sex" id="female" class="reg-radiobtn">
-                Female
-            </label><br>
+            <div class="radiobuttons">
+                <label class="reg-lab_radio">
+                    <input type="radio" name="sex" id="male" class="reg-radiobtn">
+                    Male
+                </label>
+                <label class="reg-lab_radio">
+                    <input type="radio" name="sex" id="female" class="reg-radiobtn">
+                    Female
+                </label>
+            </div><br>
             <label class="reg-lab">Login details<br>
                 <input type="text" name="e-mail" id="eMail" class="reg-input" placeholder="Email"><br>
                 <input type="text" name="password" id="password" class="reg-input reg-pass" placeholder="Password">
