--- a/cart.html
+++ b/cart.html
@@ -24,11 +24,11 @@
                     </div>
                     <div class="rightpart">
                         <img src="img/menu-btn-pic.svg " alt="menu-btn-pic" class="desktop_mod" onclick="openMenu()">
-                        <img src="img/people.svg " alt="people" class="no-phone no-phone_pic desktop_mod">
-                        <div class="chart">
-                            <img src="img/cart.svg " alt="chart" class="no-phone no-phone_pic">
+                        <a href="registration.html"><img src="img/people.svg " alt="people" class="no-phone no-phone_pic desktop_mod"></a>
+                        <a href="cart.html" class="cart">
+                            <img src="img/cart.svg " alt="cart" class="no-phone no-phone_pic">
                             <div class="goods no-phone">5</div>
-                        </div>
+                        </a>
                     </div>
                 </div>
             </div>
@@ -104,7 +104,7 @@
                     </div>
                     <div class="shopping-buttons">
                         <a href="#" class="shopping-btn">CLEAR SHOPPING CART</a>
-                        <a href="#" class="shopping-btn">CONTINUE SHOPPING</a>
+                        <a href="catalog.html" class="shopping-btn">CONTINUE SHOPPING</a>
                     </div>
                 </div>
                 <div class="countblock">
@@ -121,7 +121,7 @@
                         <p class="subtotal">SUB TOTAL <span class="sum" id="sub-total">$900</span></p>
                         <p class="total">GRAND TOTAL <span class="grandsum" id="grand-total">$900</span></p>
                         <div class="upon-button">
-                            <a href="#" class="main-btn">PROCEED TO CHECKOUT</a>
+                            <a href="catalog.html" class="main-btn">PROCEED TO CHECKOUT</a>
                         </div>
                     </div>
                 </div>
