--- a/catalog.html
+++ b/catalog.html
@@ -32,11 +32,11 @@
                     </div>
                     <div class="rightpart">
                         <img src="img/menu-btn-pic.svg " alt="menu-btn-pic" class="desktop_mod" onclick="openMenu()">
-                        <img src="img/people.svg " alt="people" class="no-phone no-phone_pic desktop_mod">
-                        <div class="chart">
-                            <img src="img/cart.svg " alt="chart" class="no-phone no-phone_pic">
+                        <a href="registration.html"><img src="img/people.svg " alt="people" class="no-phone no-phone_pic desktop_mod"></a>
+                        <a href="cart.html" class="cart">
+                            <img src="img/cart.svg " alt="cart" class="no-phone no-phone_pic">
                             <div class="goods no-phone">5</div>
-                        </div>
+                        </a>
                     </div>
                 </div>
             </div>
@@ -195,7 +195,7 @@
     <section class="growstopper">
         <div class="featured-items">
             <div class="card-block">
-                <a href="#" class="card">
+                <a href="product.html" class="card">
                     <img src="img/pic1.jpeg" alt="pic1" class="card-pic">
                     <div class="text-box">
                         <p class="card-header">ELLERY X M'O CAPSULE</p>
@@ -206,7 +206,7 @@
                     </div>
                 </a>
                 <div class="add-box">
-                    <a href="#" class="add">
+                    <a href="cart.html" class="add">
                         <img src="img/cart.svg" alt="chart">
                         <p class="add-text">Add to Cart</p>
                     </a>
@@ -214,7 +214,7 @@
             </div>
 
             <div class="card-block">
-                <a href="#" class="card">
+                <a href="product.html" class="card">
                     <img src="img/pic11.jpeg" alt="pic11" class="card-pic">
                     <div class="text-box">
                         <p class="card-header">ELLERY X M'O CAPSULE</p>
@@ -225,7 +225,7 @@
                     </div>
                 </a>
                 <div class="add-box">
-                    <a href="#" class="add">
+                    <a href="cart.html" class="add">
                         <img src="img/cart.svg" alt="chart">
                         <p class="add-text">Add to Cart</p>
                     </a>
@@ -233,7 +233,7 @@
             </div>
 
             <div class="card-block">
-                <a href="#" class="card">
+                <a href="product.html" class="card">
                     <img src="img/pic3.jpeg" alt="pic3" class="card-pic">
                     <div class="text-box">
                         <p class="card-header">ELLERY X M'O CAPSULE</p>
@@ -244,7 +244,7 @@
                     </div>
                 </a>
                 <div class="add-box">
-                    <a href="#" class="add">
+                    <a href="cart.html" class="add">
                         <img src="img/cart.svg" alt="chart">
                         <p class="add-text">Add to Cart</p>
                     </a>
@@ -252,7 +252,7 @@
             </div>
 
             <div class="card-block">
-                <a href="#" class="card">
+                <a href="product.html" class="card">
                     <img src="img/pic4.jpeg" alt="pic4" class="card-pic">
                     <div class="text-box">
                         <p class="card-header">ELLERY X M'O CAPSULE</p>
@@ -263,7 +263,7 @@
                     </div>
                 </a>
                 <div class="add-box">
-                    <a href="#" class="add">
+                    <a href="cart.html" class="add">
                         <img src="img/cart.svg" alt="chart">
                         <p class="add-text">Add to Cart</p>
                     </a>
@@ -271,7 +271,7 @@
             </div>
 
             <div class="card-block">
-                <a href="#" class="card">
+                <a href="product.html" class="card">
                     <img src="img/pic10.jpeg" alt="pic10" class="card-pic">
                     <div class="text-box">
                         <p class="card-header">ELLERY X M'O CAPSULE</p>
@@ -282,7 +282,7 @@
                     </div>
                 </a>
                 <div class="add-box">
-                    <a href="#" class="add">
+                    <a href="cart.html" class="add">
                         <img src="img/cart.svg" alt="chart">
                         <p class="add-text">Add to Cart</p>
                     </a>
@@ -290,7 +290,7 @@
             </div>
 
             <div class="card-block">
-                <a href="#" class="card">
+                <a href="product.html" class="card">
                     <img src="img/pic8.jpeg" alt="pic8" class="card-pic">
                     <div class="text-box">
                         <p class="card-header">ELLERY X M'O CAPSULE</p>
@@ -301,7 +301,7 @@
                     </div>
                 </a>
                 <div class="add-box">
-                    <a href="#" class="add">
+                    <a href="cart.html" class="add">
                         <img src="img/cart.svg" alt="chart">
                         <p class="add-text">Add to Cart</p>
                     </a>
@@ -309,7 +309,7 @@
             </div>
 
             <div class="card-block">
-                <a href="#" class="card">
+                <a href="product.html" class="card">
                     <img src="img/pic12.jpeg" alt="pic12" class="card-pic">
                     <div class="text-box">
                         <p class="card-header">ELLERY X M'O CAPSULE</p>
@@ -320,7 +320,7 @@
                     </div>
                 </a>
                 <div class="add-box">
-                    <a href="#" class="add">
+                    <a href="cart.html" class="add">
                         <img src="img/cart.svg" alt="chart">
                         <p class="add-text">Add to Cart</p>
                     </a>
@@ -328,7 +328,7 @@
             </div>
 
             <div class="card-block">
-                <a href="#" class="card">
+                <a href="product.html" class="card">
                     <img src="img/pic9.jpeg" alt="pic9" class="card-pic">
                     <div class="text-box">
                         <p class="card-header">ELLERY X M'O CAPSULE</p>
@@ -339,7 +339,7 @@
                     </div>
                 </a>
                 <div class="add-box">
-                    <a href="#" class="add">
+                    <a href="cart.html" class="add">
                         <img src="img/cart.svg" alt="chart">
                         <p class="add-text">Add to Cart</p>
                     </a>
@@ -347,7 +347,7 @@
             </div>
 
             <div class="card-block">
-                <a href="#" class="card">
+                <a href="product.html" class="card">
                     <img src="img/pic7.jpeg" alt="pic7" class="card-pic">
                     <div class="text-box">
                         <p class="card-header">ELLERY X M'O CAPSULE</p>
@@ -358,7 +358,7 @@
                     </div>
                 </a>
                 <div class="add-box">
-                    <a href="#" class="add">
+                    <a href="cart.html" class="add">
                         <img src="img/cart.svg" alt="chart">
                         <p class="add-text">Add to Cart</p>
                     </a>
