--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
                     </div>
                     <div class="rightpart">
                         <img src="img/menu-btn-pic.svg " alt="menu-btn-pic" class="desktop_mod" onclick="openMenu()">
-                        <img src="img/people.svg " alt="people" class="no-phone no-phone_pic desktop_mod">
-                        <div class="chart">
-                            <img src="img/cart.svg " alt="chart" class="no-phone no-phone_pic">
+                        <a href="registration.html"><img src="img/people.svg " alt="people" class="no-phone no-phone_pic desktop_mod"></a>
+                        <a href="cart.html" class="cart">
+                            <img src="img/cart.svg " alt="cart" class="no-phone no-phone_pic">
                             <div class="goods no-phone">5</div>
-                        </div>
+                        </a>
                     </div>
                 </div>
             </div>
@@ -129,7 +129,7 @@
         </div>
         <div class="featured-items">
             <div class="card-block">
-                <a href="#" class="card">
+                <a href="product.html" class="card">
                     <img src="img/pic1.jpeg" alt="pic1" class="card-pic">
                     <div class="text-box">
                         <p class="card-header">ELLERY X M'O CAPSULE</p>
@@ -140,14 +140,15 @@
                     </div>
                 </a>
                 <div class="add-box">
-                    <a href="#" class="add">
+                    <a href="cart.html" class="add">
                         <img src="img/cart.svg" alt="chart">
                         <p class="add-text">Add to Cart</p>
                     </a>
                 </div>
             </div>
+
             <div class="card-block">
-                <a href="#" class="card">
+                <a href="product.html" class="card">
                     <img src="img/pic2.jpeg" alt="pic2" class="card-pic">
                     <div class="text-box">
                         <p class="card-header">ELLERY X M'O CAPSULE</p>
@@ -158,14 +159,15 @@
                     </div>
                 </a>
                 <div class="add-box">
-                    <a href="#" class="add">
+                    <a href="cart.html" class="add">
                         <img src="img/cart.svg" alt="chart">
                         <p class="add-text">Add to Cart</p>
                     </a>
                 </div>
             </div>
+
             <div class="card-block">
-                <a href="#" class="card">
+                <a href="product.html" class="card">
                     <img src="img/pic3.jpeg" alt="pic3" class="card-pic">
                     <div class="text-box">
                         <p class="card-header">ELLERY X M'O CAPSULE</p>
@@ -176,14 +178,15 @@
                     </div>
                 </a>
                 <div class="add-box">
-                    <a href="#" class="add">
+                    <a href="cart.html" class="add">
                         <img src="img/cart.svg" alt="chart">
                         <p class="add-text">Add to Cart</p>
                     </a>
                 </div>
             </div>
+
             <div class="card-block">
-                <a href="#" class="card">
+                <a href="product.html" class="card">
                     <img src="img/pic4.jpeg" alt="pic4" class="card-pic">
                     <div class="text-box">
                         <p class="card-header">ELLERY X M'O CAPSULE</p>
@@ -194,14 +197,15 @@
                     </div>
                 </a>
                 <div class="add-box">
-                    <a href="#" class="add">
+                    <a href="cart.html" class="add">
                         <img src="img/cart.svg" alt="chart">
                         <p class="add-text">Add to Cart</p>
                     </a>
                 </div>
             </div>
+
             <div class="card-block">
-                <a href="#" class="card">
+                <a href="product.html" class="card">
                     <img src="img/pic5.jpeg" alt="pic5" class="card-pic">
                     <div class="text-box">
                         <p class="card-header">ELLERY X M'O CAPSULE</p>
@@ -212,14 +216,15 @@
                     </div>
                 </a>
                 <div class="add-box">
-                    <a href="#" class="add">
+                    <a href="cart.html" class="add">
                         <img src="img/cart.svg" alt="chart">
                         <p class="add-text">Add to Cart</p>
                     </a>
                 </div>
             </div>
+
             <div class="card-block">
-                <a href="#" class="card">
+                <a href="product.html" class="card">
                     <img src="img/pic6.jpeg" alt="pic6" class="card-pic">
                     <div class="text-box">
                         <p class="card-header">ELLERY X M'O CAPSULE</p>
@@ -230,7 +235,7 @@
                     </div>
                 </a>
                 <div class="add-box">
-                    <a href="#" class="add">
+                    <a href="cart.html" class="add">
                         <img src="img/cart.svg" alt="chart">
                         <p class="add-text">Add to Cart</p>
                     </a>
