--- a/product.html
+++ b/product.html
@@ -33,11 +33,11 @@
                     </div>
                     <div class="rightpart">
                         <img src="img/menu-btn-pic.svg " alt="menu-btn-pic" class="desktop_mod" onclick="openMenu()">
-                        <img src="img/people.svg " alt="people" class="no-phone no-phone_pic desktop_mod">
-                        <div class="chart">
-                            <img src="img/cart.svg " alt="chart" class="no-phone no-phone_pic">
+                        <a href="registration.html"><img src="img/people.svg " alt="people" class="no-phone no-phone_pic desktop_mod"></a>
+                        <a href="cart.html" class="cart">
+                            <img src="img/cart.svg " alt="cart" class="no-phone no-phone_pic">
                             <div class="goods no-phone">5</div>
-                        </div>
+                        </a>
                     </div>
                 </div>
             </div>
@@ -114,7 +114,7 @@
                     </li>
                 </ul>
                 <div class="dc-add-box">
-                    <a href="#" class="dc-add">
+                    <a href="cart.html" class="dc-add">
                         <svg class="floating-cart">
                             <use xlink:href="#cart-icon" />
                         </svg>
@@ -128,7 +128,7 @@
             <div class="featured-items">
 
                 <div class="card-block">
-                    <a href="#" class="card">
+                    <a href="product.html" class="card">
                         <img src="img/pic4.jpeg" alt="pic4" class="card-pic">
                         <div class="text-box">
                             <p class="card-header">ELLERY X M'O CAPSULE</p>
@@ -139,7 +139,7 @@
                         </div>
                     </a>
                     <div class="add-box">
-                        <a href="#" class="add">
+                        <a href="cart.html" class="add">
                             <img src="img/cart.svg" alt="chart">
                             <p class="add-text">Add to Cart</p>
                         </a>
@@ -147,7 +147,7 @@
                 </div>
 
                 <div class="card-block">
-                    <a href="#" class="card">
+                    <a href="product.html" class="card">
                         <img src="img/pic3.jpeg" alt="pic3" class="card-pic">
                         <div class="text-box">
                             <p class="card-header">ELLERY X M'O CAPSULE</p>
@@ -158,7 +158,7 @@
                         </div>
                     </a>
                     <div class="add-box">
-                        <a href="#" class="add">
+                        <a href="cart.html" class="add">
                             <img src="img/cart.svg" alt="chart">
                             <p class="add-text">Add to Cart</p>
                         </a>
@@ -166,7 +166,7 @@
                 </div>
 
                 <div class="card-block">
-                    <a href="#" class="card">
+                    <a href="product.html" class="card">
                         <img src="img/pic6.jpeg" alt="pic6" class="card-pic">
                         <div class="text-box">
                             <p class="card-header">ELLERY X M'O CAPSULE</p>
@@ -177,7 +177,7 @@
                         </div>
                     </a>
                     <div class="add-box">
-                        <a href="#" class="add">
+                        <a href="cart.html" class="add">
                             <img src="img/cart.svg" alt="chart">
                             <p class="add-text">Add to Cart</p>
                         </a>
