--- a/registration.html
+++ b/registration.html
@@ -33,11 +33,11 @@
                     </div>
                     <div class="rightpart">
                         <img src="img/menu-btn-pic.svg " alt="menu-btn-pic" class="desktop_mod" onclick="openMenu()">
-                        <img src="img/people.svg " alt="people" class="no-phone no-phone_pic desktop_mod">
-                        <div class="chart">
-                            <img src="img/cart.svg " alt="chart" class="no-phone no-phone_pic">
+                        <a href="registration.html"><img src="img/people.svg " alt="people" class="no-phone no-phone_pic desktop_mod"></a>
+                        <a href="cart.html" class="cart">
+                            <img src="img/cart.svg " alt="cart" class="no-phone no-phone_pic">
                             <div class="goods no-phone">5</div>
-                        </div>
+                        </a>
                     </div>
                 </div>
             </div>
