Sass styles for catalog page

--- a/catalog.html
+++ b/catalog.html
@@ -7,10 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Brand – Catalog</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900">
-    <link rel="stylesheet" href="phone.css">
-    <link rel="stylesheet" href="tablet.css">
-    <link rel="stylesheet" href="desktop.css">
-    <link rel="stylesheet" href="catalog.css">
+    <link rel="stylesheet" href="styles/catalog.css">
 
     <svg width="15" height="10" fill="none" xmlns="http://www.w3.org/2000/svg" style="display: none;">
         <symbol id="filter-icon" viewBox="0 0 15 10">
